updated index.html for spacing

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 
 			</div>
 
+      <!-- empty column for spacing -->
+			<div class="col-md-1"></div>
+
 			<!-- right column for #gameSection -->
-			<div class="col-md-5" id="gameSection">
+			<div class="col-md-4" id="gameSection">
 
 				<!-- first row, #currentWord -->
 				<div class="row arrayRows" id="firstRow">
